# neurolab

./: .env.example  .gitignore  CONTEXT  LICENSE  README.md  package-lock.json  package.json
backend/: __init__.py  main.py  pyproject.toml  schemas.py
backend/agents/: science_planner.py
backend/api/: __init__.py  ligands.py  science_planner.py  screen.py  targets.py  workflows.py
backend/models/: bbb_rf.joblib  bbb_rf.json
backend/modules/: __init__.py  bbb_model.py  chembl_client.py  descriptors.py  errors.py  ligand_finder.py  predictor.py  ranker.py  target_resolver.py  target_selector.py  workflow.py
backend/science/: __init__.py  bbb.py  benchmark.py  chembl_bulk.py  cli.py  datasets.py  dock_screen.py  docking.py  featurizers.py  metrics.py  models.py  provenance.py  redock.py  splits.py  train_bbb.py
backend/tests/: test_api.py  test_bbb_model.py  test_descriptors_and_ranker.py  test_docking.py  test_module_contracts.py  test_science.py  test_screen.py
docker/: docker-compose.yml
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: evidence.tsx
frontend/src/pages/: DockingVisualizer.tsx  Home.tsx  MoleculeEditor.tsx  ResultsDashboard.tsx  Screen.tsx  WorkflowBuilder.tsx
reports/: FINDINGS.md  benchmark-2026-07-18.json  benchmark-2026-07-18.md  benchmark-2026-07-19.json  benchmark-2026-07-19.md  docking-vs-similarity-2026-07-19.json  docking-vs-similarity-2026-07-19.md  redocking-2026-07-19.json  redocking-2026-07-19.md
scripts/: fetch_smina.sh
