[project]
name = "neurolab-backend"
version = "0.1.0"
description = "FastAPI backend for NeuroLab's runnable scientific workflow MVP."
authors = [
    {name = "Abderrahim Safou",email = "safou348@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.14,<0.116.0",
    "uvicorn>=0.35.0,<0.36.0",
    "rdkit>=2025.3.3,<2026.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "cachetools>=6.1.0,<7.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pandas>=2.3.3",
    "pytest>=8.0.0,<9.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]

[tool.uv]
package = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
